Add Unit-Test and Integrationstest-Repaired3